--- a/templates/add.html
+++ b/templates/add.html
@@ -36,7 +36,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <input type="text" name="nname" id="nname" class="form-control input-lg" placeholder="Apelido" tabindex="3">
+                  <input type="text" name="nick_name" id="nick_name" class="form-control input-lg" placeholder="Apelido" tabindex="3">
                 </div>
                 
                 <div class="row">
@@ -67,7 +67,7 @@
                   <input type="text" name="email" id="email" class="form-control input-lg" placeholder="Email" tabindex="8">
                 </div>
                 <div class="form-group">
-                  <input type="text" name="telefone" id="telefone" class="form-control input-lg" placeholder="Telefone" tabindex="9">
+                  <input type="text" name="telephone" id="telephone" class="form-control input-lg" placeholder="Telefone" tabindex="9">
                 </div>
 
                 
