Missing name form

--- a/templates/add.html
+++ b/templates/add.html
@@ -33,6 +33,9 @@
                   <input style="display:none" type="file" name="photo" id="photo" class="form-control input-lg" label="Foto" tabindex="1" accept="image/gif, image/jpeg, image/png">
                 </div>  
 
+                <div class="form-group">
+                  <input type="text" name="name" id="name" class="form-control input-lg" placeholder="Nome" tabindex="2">
+                </div>
 
                 <div class="form-group">
                   <input type="text" name="nick_name" id="nick_name" class="form-control input-lg" placeholder="Apelido" tabindex="3">
@@ -82,8 +85,8 @@
                   </div>
                 </div>
                   <div class="row">
-                    <div class="col-xs-6 col-md-6"><a href="admin" class="btn btn-danger btn-block btn-lg">Voltar</a></div>
-                    <div class="col-xs-6 col-md-6"><a id="addFormSubmit" class="btn btn-block btn-lg btn-success">Adicionar</a></div>
+                    <div class="col-xs-6 col-md-6" style="margin: 10px auto 10px auto;"><a href="admin" class="btn btn-danger btn-block btn-lg">Voltar</a></div>
+                    <div class="col-xs-6 col-md-6" style="margin: 10px auto 10px auto;"><a id="addFormSubmit" class="btn btn-block btn-lg btn-success">Adicionar</a></div>
                   </div>
             </form>
 
