--- a/templates/modify.html
+++ b/templates/modify.html
@@ -96,12 +96,12 @@
 
               <div class="row">
 
-                <div id="remove" class="col-xs-6 col-md-6"><a href="admin" class="btn btn-danger btn-block btn-lg">Remover</a></div>
-                <div id="save" class="col-xs-6 col-md-6"><a href="admin" class="btn btn-success btn-block btn-lg" tabindex="7">Salvar</a></div>
+                <div id="remove" class="col-xs-6 col-md-6" style="margin: 5px auto 5px auto;"><a href="admin" class="btn btn-danger btn-block btn-lg">Remover</a></div>
+                <div id="save" class="col-xs-6 col-md-6" style="margin: 5px auto 5px auto;"><a href="admin" class="btn btn-success btn-block btn-lg" tabindex="7">Salvar</a></div>
               
               </div>
               
-              <div id="back" style="width: 60%; margin: 8px auto 10px auto;"><a href="home.html" class="btn btn-primary btn-block btn-lg">Voltar</a></div>
+              <div id="back" style="width: 60%; margin: 5px auto 10px auto;"><a href="home.html" class="btn btn-primary btn-block btn-lg">Voltar</a></div>
               
             </form>
           </div>
